add scripts to auto install packages

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "start": "lerna run start"
+    "postinstall": "lerna bootstrap --hoist",
+    "start": "lerna run start --parallel"
   },
   "devDependencies": {
     "lerna": "^3.22.1"
