--- a/packages/device/package.json
+++ b/packages/device/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "screen",
+  "name": "device",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,7 +11,7 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
-    "start": "PORT=3031 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
