Add simple peer and show offer

--- a/packages/screen/package.json
+++ b/packages/screen/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^1.2.1"
+    "semantic-ui-react": "^1.2.1",
+    "simple-peer": "^9.7.2"
   },
   "scripts": {
     "start": "PORT=3031 react-scripts start",
