--- a/packages/screen/package.json
+++ b/packages/screen/package.json
@@ -10,6 +10,7 @@
     "motion-sensors-polyfill": "^0.3.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-qr-reader": "^2.2.1",
     "react-scripts": "3.4.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.2.1",
