--- a/packages/screen/package.json
+++ b/packages/screen/package.json
@@ -7,10 +7,11 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
-    "motion-sensors-polyfill": "^0.3.1",
+    "konva": "^7.1.3",
     "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-konva": "^16.13.0-6",
     "react-qr-reader": "^2.2.1",
     "react-scripts": "3.4.3",
     "semantic-ui-css": "^2.4.1",
