--- a/packages/screen/package.json
+++ b/packages/screen/package.json
@@ -20,6 +20,7 @@
   },
   "scripts": {
     "start": "PORT=3031 react-scripts start",
+    "start:heroku": "REACT_APP_API_URL=https://e-quilibrium-api.herokuapp.com/ PORT=3031 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
