chore: move api to separate repo and remove lerna

--- a/package.json
+++ b/package.json
@@ -1,12 +1,43 @@
 {
-  "name": "root",
+  "name": "front",
+  "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "postinstall": "lerna bootstrap --hoist",
-    "start": "lerna run start --parallel"
+  "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.20.0",
+    "konva": "^7.1.3",
+    "qrcode.react": "^1.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-konva": "^16.13.0-6",
+    "react-qr-reader": "^2.2.1",
+    "react-scripts": "3.4.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^1.2.1",
+    "simple-peer": "^9.6.2"
   },
-  "devDependencies": {
-    "heroku": "^7.43.2",
-    "lerna": "^3.22.1"
+  "scripts": {
+    "start": "PORT=3031 react-scripts start",
+    "start:heroku": "REACT_APP_API_URL=https://e-quilibrium-api.herokuapp.com/ PORT=3031 react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
