--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-export-excel": "^0.5.3",
     "react-konva": "^16.13.0-6",
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.2.0",
