--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
+    "predeploy": "REACT_APP_API_URL=https://e-quilibrium-api.herokuapp.com/ npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
